Scrollbar & Hero Section Fixes

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,18 @@ section{
   margin-top: 5%;
   margin-bottom: 5rem;
 }
+
+::-webkit-scrollbar{
+  background-color: white;
+  width: 0.4vw;
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(to bottom, #fc4958, #e85d05, #fc4958);
+}
+
+.show{
+  opacity: 1 !important;
+  visibility: visible !important;
+  right: 0 !important;
+}
